src/test/ui/hygiene/assoc_ty_bindings.stderr
error: compilation successful
  --> $DIR/assoc_ty_bindings.rs:39:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

